# aibot-backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/CODEMAPS/: INDEX.md  architecture.md  backend.md  dependencies.md
src/aibot/: config.py  main.py
src/aibot/api/: token.py
src/aibot/github/: auth.py  client.py  secrets.py  workflow.py
src/aibot/webhook/: router.py  verify.py
src/aibot/webhook/handlers/: installation.py
templates/: dispatch.yml  pr_body.md
tests/: conftest.py
tests/api/: test_token.py
tests/github/: test_auth.py  test_secrets.py  test_workflow.py
tests/webhook/: test_installation.py  test_verify.py
