[project]
name = "aibot"
version = "0.1.0"
description = "GitHub App backend — provisions AI CLI dispatch workflow to repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pyjwt[crypto]>=2.12.1",
    "pynacl>=1.5.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[project.scripts]
aibot = "aibot.main:create_app"
